# work_OOP

./: .coverage  .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  index.html  z_99295650fa6a74bc___init___py.html  z_99295650fa6a74bc_products_2_py.html  z_99295650fa6a74bc_products_py.html
src/: Magic_Methods.py  Multiple_Inheritance.py  exceptions.py  family.py  inheritance.py  magic.py  products.py  products_2.py  shop_classes.py
tests/: .gitignore  report.html  test_Magic_Methods.py  test_Multiple_Inheritance.py  test_exeptions.py  test_family.py  test_inheritance.py  test_magic.py  test_products.py  test_products_2.py  test_shop_classes.py  test_store_models.py
tests/htmlcov/: function_index.html  status.json
