[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Fish3r228 <zayarobert30@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest-html = "^4.0.0"
allure-pytest = "^2.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
